# fake-gpu

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  entrypoint.sh  go.mod  go.sum  index.yaml  install.yaml
.github/: chart-releaser.yaml
.github/workflows/: package-helm.yaml  publish-helm-release.yaml  publish-helm.yaml  publish-images.yaml
charts/fake-gpu/: Chart.yaml  values.yaml
charts/fake-gpu/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  daemonset.yaml  serviceaccount.yaml
cmd/device-injector/: main.go
cmd/nvidia-smi/: main.go
conf/: fake-gpu.yaml
examples/: fake-gpu.yaml
pkg/nvidia/: root.go
pkg/nvidia/common/: gpu.go
pkg/nvidia/query/: query.go
pkg/nvidia/topo/: topo.go
src/common/: common.h  macro_common.h  trace_profile.h
src/cuda/: cuda_hook.cpp  cuda_subset.h
src/cudart/: cudart_hook.cpp
src/nvml/: export_table.h  nvml_hook.cpp  nvml_subset.h
